# ChangeLog for app-i18n/scim-pinyin
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/scim-pinyin/ChangeLog,v 1.20 2006/12/31 18:46:43 ticho Exp $

  31 Dec 2006; Andrej Kacian <ticho@gentoo.org>
  scim-pinyin-0.5.91-r1.ebuild:
  Stable on x86, bug #159206.

  29 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  scim-pinyin-0.5.91-r1.ebuild:
  Stable on ppc wrt bug #159206.

  29 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  scim-pinyin-0.5.91-r1.ebuild:
  Keyworded ~sparc

  21 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  scim-pinyin-0.5.91-r1.ebuild:
  USe m4 directory when rebuilding autotools support. Thanks to Zhang Le in
  bug #144930.

  16 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  scim-pinyin-0.5.91.ebuild:
  Add missing pkg-config depedency, thanks to Patrick Lauer for reporting in
  bug #151618. Remove arts useflag, as it's pointless.

  24 Sep 2006; Diego Pettenò <flameeyes@gentoo.org>
  scim-pinyin-0.5.91-r1.ebuild:
  Fix the autotools version dependencies.

  04 Jul 2006; Markus Rothe <corsair@gentoo.org>
  scim-pinyin-0.5.91-r1.ebuild:
  Added ~ppc64

*scim-pinyin-0.5.91-r1 (03 Jul 2006)

  03 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/scim-pinyin-0.5.91-fixconfigure.patch,
  +files/scim-pinyin-qt335.patch, scim-pinyin-0.5.91.ebuild,
  +scim-pinyin-0.5.91-r1.ebuild:
  Fix building with Qt 3.3.5, thanks to Wai Ling for reporting. Make skim
  support conditional to kde useflag in last version (drop alpha, sparc, ppc64
  keywords). Don't use gnome2 eclass if unneeded.

  30 Apr 2006; Simon Stelling <blubb@gentoo.org> scim-pinyin-0.5.91.ebuild:
  stable on amd64

  10 Feb 2006; Alastair Tse <liquidx@gentoo.org> -scim-pinyin-0.5.0.ebuild,
  -scim-pinyin-0.5.90.ebuild, scim-pinyin-0.5.91.ebuild:
  modular-X-ified

  25 Nov 2005; Tom Gall <tgall@gentoo.org> scim-pinyin-0.5.91.ebuild:
  stable on ppc64

  02 Oct 2005; Michael Hanselmann <hansmi@gentoo.org>