@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/scim-pinyin/scim-pinyin-0.5.91-r1.ebuild,v 1.7 2006/12/31 18:46:43 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/scim-pinyin/scim-pinyin-0.5.91-r1.ebuild,v 1.8 2007/01/04 00:26:56 kloeri Exp $
 
 WANT_AUTOCONF=latest
 WANT_AUTOMAKE=latest
@@ -14,7 +14,7 @@ SRC_URI="mirror://sourceforge/scim/${P}.tar.gz"
 IUSE="kde nls"
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ppc ~ppc64 ~sparc x86"
+KEYWORDS="~alpha ~amd64 ppc ~ppc64 ~sparc x86"
 
 RDEPEND="|| ( x11-libs/libXt virtual/x11 )
 	|| ( >=app-i18n/scim-1.1 >=app-i18n/scim-cvs-1.1 )
