@@ -1,6 +1,9 @@
 # ChangeLog for app-i18n/skim
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/skim/ChangeLog,v 1.50 2006/10/30 15:22:47 flameeyes Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/skim/ChangeLog,v 1.51 2007/01/04 00:26:25 kloeri Exp $
+
+  04 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> skim-1.4.5.ebuild:
+  Add ~alpha keyword.
 
   30 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> skim-1.4.5.ebuild:
   Add ~x86-fbsd keyword.
