@@ -1,6 +1,10 @@
 # ChangeLog for app-i18n/scim-pinyin
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/scim-pinyin/ChangeLog,v 1.20 2006/12/31 18:46:43 ticho Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/scim-pinyin/ChangeLog,v 1.21 2007/01/04 00:26:56 kloeri Exp $
+
+  04 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
+  scim-pinyin-0.5.91-r1.ebuild:
+  Add ~alpha keyword.
 
   31 Dec 2006; Andrej Kacian <ticho@gentoo.org>
   scim-pinyin-0.5.91-r1.ebuild:
